--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "watch": "tsc -w"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.8",
     "mysql": "^2.18.1",
@@ -19,6 +20,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^12.0.3",
     "express": "^4.17.2"
   }
