--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.2.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.8",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
@@ -20,8 +22,11 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "dotenv": "^12.0.3",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "express-fileupload": "^1.2.1",
+    "multer": "^1.4.4"
   }
 }
