--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.2.2",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/multer": "^1.4.7",
     "@types/node": "^17.0.8",
     "mysql": "^2.18.1",
@@ -29,6 +30,7 @@
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "express-fileupload": "^1.2.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4"
   }
 }
