--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.2.2",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
     "@types/node": "^17.0.10",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "eslint": "^8.7.0",
@@ -37,6 +40,8 @@
     "express": "^4.17.2",
     "express-fileupload": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.4"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "swagger-ui-express": "^4.3.0"
   }
 }
