--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon dist/index.js",
     "start-ts": "ts-node src/index.ts",
+    "typeorm:cli": "ts-node ./node_modules/typeorm/cli -f ./ormconfig.json",
     "watch": "tsc -w",
     "lint": "eslint . --ext .ts"
   },
@@ -34,6 +35,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@types/yargs": "^17.0.8",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "class-validator": "^0.13.2",
@@ -45,6 +47,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "swagger-ui-express": "^4.3.0",
+    "typeorm-extension": "^1.1.0",
     "validator": "^13.7.0"
   }
 }
