--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start-ts": "ts-node src/index.ts",
     "typeorm:cli": "ts-node ./node_modules/typeorm/cli -f ./ormconfig.json",
     "watch": "tsc -w",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "build": "tsc -b"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
